# mariadb-server

./: .gitignore  .gitmodules  CMakeLists.txt  COMMUNITY_CONTRIBUTIONS.md  VERSION  appveyor.yml
.github/: copilot-instructions.md
.github/workflows/: windows-arm64.yml  windows-x64.yml
Docs/: internal-temporary-tables.txt
Docs/replication/: binlog.md
client/: CMakeLists.txt  mysql.cc  mysql_upgrade.c  mysqladmin.cc  mysqlbinlog-engine.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqldump.cc  mysqlimport.c  mysqlshow.c  mysqltest.cc
cmake/: libfmt.cmake  make_dist.cmake.in  pcre.cmake  plugin.cmake  ssl.cmake
dbug/: dbug.c
debian/: autobake-deb.sh  mariadb-test-data.install  mariadb-test-data.lintian-overrides  not-installed
extra/: CMakeLists.txt
extra/mariabackup/: CMakeLists.txt  backup_mysql.cc  backup_mysql.h  xtrabackup.cc
extra/wolfssl/: CMakeLists.txt
include/: CMakeLists.txt  ft_global.h  heap.h  m_ctype.h  m_string.h  mariadb_capi_rename.h  my_base.h  my_compare.h  my_global.h  my_pthread.h  my_sys.h  my_time.h  my_tree.h  my_xml.h  mysql_com.h
include/mysql/: Doxyfile.generated_docs_plugin_api  generate_plugin_api_docs.sh  index.dox  plugin.h  plugin_audit.h.pp  plugin_auth.h.pp  plugin_data_type.h.pp  plugin_encryption.h.pp  plugin_ftparser.h.pp  plugin_function.h.pp  plugin_password_validation.h.pp  service_debug_sync.h  service_logger.h  service_my_snprintf.h  service_progress_report.h  service_thd_autoinc.h  service_thd_rnd.h  service_wsrep.h
include/mysql/psi/: mysql_mdl.h  mysql_socket.h  mysql_thread.h  psi.h  psi_base.h  psi_memory.h
libmysqld/: CMakeLists.txt  libmysql.c
man/: mariadb-binlog.1
mysql-test/: mariadb-test-run.pl  suite.pm
mysql-test/collections/: 10.0-compatible.list  buildbot_suites.bat  smoke_test
mysql-test/include/: check-testcase.inc  crash_mysqld.inc  get_rec_idx_ranges_from_opt_ctx.inc  get_sys_vars_from_opt_ctx.inc  have_innodb_binlog.inc  have_mariabackup_combination.combinations  have_mariabackup_combination.inc  have_mariabackup_wrapper.inc  lcase_names.combinations  lcase_names.inc  load_dump_and_upgrade.inc  maria_verify_recovery.inc  not_ssl.inc  opt_context_list_sys_vars.inc  opt_context_list_tables_and_ranges.inc  opt_context_list_tables_ddls.inc  opt_context_save_in_var.inc  opt_context_schema.inc  show_binlog_events.inc  show_events.inc
mysql-test/main/: a.result  a.test  alter_table-big.result  alter_table-big.test  alter_table.result  alter_table.test  alter_table_combinations,heap.rdiff  blob_sj_test.result  blob_sj_test.test  bug35920.result  bug35920.test  chained_ssl_certificates.test  change_master_default.result  change_master_default.test  check_constraint.result  check_constraint.test  check_syntax.result  check_syntax.test  clone_consistent_snapshot.result  clone_consistent_snapshot.test  column_compression.result  column_compression.test  connect.test  connect2.test  constraints.result  costs.test  crash_commit_before.result  crash_commit_before.test  create.result  create.test  create_or_replace2.result  create_or_replace2.test  create_select.result  create_select.test  cte_nonrecursive.result  cte_nonrecursive.test  cte_recursive.result  cte_recursive.test  cte_update_delete.test  ctype_binary.result  (+326 more)
mysql-test/std_data/: MDEV-39816.MYI  mysql8_users_dump.sql  mysql8_users_setup.sql  new-format-master.info  new-format-relay-log-win.info  new-format-relay-log.info
mysys/: CMakeLists.txt  ma_dyncol.c  my_compare.c  my_init.c  my_lib.c  my_malloc.c  my_thread_name.cc  my_virtual_mem.c  tree.c
mysys_ssl/: my_crypt.cc
plugin/auth_pam/: auth_pam.c  auth_pam_v1.c
plugin/auth_parsec/: server_parsec.cc
plugin/ft_json/: CMakeLists.txt  ft_json.c
plugin/server_audit/: server_audit.c
plugin/type_cursor/: plugin.cc
plugin/type_xmltype/: CMakeLists.txt  item_func_xml_isvalid.cc  plugin.cc  sql_type_xmltype.cc  sql_type_xmltype.h
rpl/: CMakeLists.txt  remote_event_stream.cc  remote_event_stream.h
scripts/: fill_help_tables.sql  mariadb_system_tables.sql  mariadb_system_tables_fix.sql  wsrep_sst_mariabackup.sh  wsrep_sst_rsync.sh
sql/: CMakeLists.txt  backup.cc  check_syntax.cc  check_syntax.h  client_settings.h  create_options.cc  create_options.h  create_tmp_table.h  dbp.cc  dbp.h  ddl_log.cc  event_common.cc  event_data_objects.cc  event_db_repository.cc  events.cc  field.cc  field.h  filesort.cc  ha_partition.cc  ha_partition.h  ha_sequence.cc  handler.cc  handler.h  item.cc  item.h  item_buff.cc  item_cmpfunc.cc  item_cmpfunc.h  item_create.cc  item_func.cc  item_func.h  item_geofunc.cc  item_jsonfunc.cc  item_strfunc.cc  item_strfunc.h  item_subselect.cc  item_subselect.h  item_sum.cc  item_sum.h  item_timefunc.cc  (+182 more)
sql-common/: client.c
sql/index/: fts.cc  fts.h  hlindex.h  vector_mhnsw.cc  vector_mhnsw.h
sql/share/: errmsg-utf8.txt
storage/archive/: ha_archive.cc
storage/duckdb/: .gitignore  CMakeLists.txt  README.md  duckdb.cnf  duckdb_udf.cc  ha_duckdb.cc
storage/duckdb/cmake/: duckdb.cmake  duckdb_extensions.cmake
storage/duckdb/convertor/: ddl_convertor.cc  ddl_convertor.h  dml_convertor.cc  duckdb_select.cc
storage/duckdb/docs/: architecture.md  disabled-tests-plan.md  mariadb-duckdb-incompatibilities.md  security-model.md  shared-resources.md  space-reclaim.md
storage/duckdb/mysql-test/duckdb/: disabled.def  my.cnf  suite.opt
storage/duckdb/mysql-test/duckdb/r/: duckdb_time_func.result  duckdb_uuid.result  run_in_duckdb_access.result  space_reclaim.result
storage/duckdb/mysql-test/duckdb/t/: duckdb_time_func.test  duckdb_time_func_unsupported.test  duckdb_uuid.test  run_in_duckdb_access-master.opt  run_in_duckdb_access.test  space_reclaim-master.opt  space_reclaim.test
storage/duckdb/runtime/: CMakeLists.txt  cross_engine_scan.cc  delta_appender.cc  duckdb_manager.cc  duckdb_mysql_compat.cc
storage/duckdb/tpch/: 02_generate.sh  03_schema.sh  04_load.sh  05_run_queries.sh  README.md  config.sh
strings/: CMakeLists.txt  ctype-utf8.c  decimal.c  json_lib.c  my_vsnprintf.c
tests/: async_queries.c  mysql_client_test.c
(+767 files in other folders)
